[package]
name = "webrtc-signaling"
version = "1.0.0"
edition = "2021"
description = "WebSocket signaling server for WebRTC with JWT authentication"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "8.0"
async-trait = "0.1"
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rheomesh = "0.5.0"
webrtc = "0.13.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"

[lib]
name = "webrtc_signaling"
path = "src/lib.rs"


